# hebrew_accents

./: .gitignore  BACKGROUND.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README copy.md  README.md  TODO.md
.github/workflows/: build_and_test.yml
doc/: Accuracy  Incomplete_overview_of_the_masoretic_hebrew_accents.ods  Overview_of_the_hebrew_accents.ods  Transliteration.ods
src/: accent.rs  accent_codepoints.rs  accent_data.rs  accent_display.rs  accentinformation.rs  char.rs  codepoints.rs  constants.rs  contains.rs  data_structures.rs  filter.rs  lib.rs  regex.rs  sc_funcs.rs  sc_regex.rs  sentence.rs  sentence_context.rs  sentence_ctx.rs  sentence_ctx_contains.rs  sentence_ctx_find.rs  sentence_ctx_funcs.rs  sentence_ctx_regex.rs
tests/: accent_category.rs  accent_code_points.rs  accent_english_name.rs  accent_hebrew_name.rs  accent_meaning.rs  accent_rank.rs  accent_tables.rs  accent_type.rs  accent_word_stress.rs  contains_accent.rs  find_accent.rs  test_accent_rank.rs
