[package]
name = "hebrew_accents"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Roest Dev <github.ebook242@passinbox.com>"]
description = "A library for finding, filtering, and displaying Hebrew accents, specifically focusing on the Tiberian accent system as documented by the Masoretes"
documentation = "https://docs.rs/crate/hebrew_accents/"
repository = "https://github.com/Roestdev/hebrew_accents/"
keywords = ["hebrew", "cantillation marks", "utf-8"]
categories = ["text-processing"]
readme = "README.md"
#rust-version = "1.56.1"

[dependencies]
# hebrew_unicode_script = "2.0.0"
