[package]
name = "hebrew_accents"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Roest Dev <github.ebook242@passinbox.com>"]
description = "A library for finding, filtering, and displaying Hebrew accents, specifically focusing on the Tiberian accent system as documented by the Masoretes"
documentation = "https://docs.rs/crate/hebrew_accents/"
repository = "https://github.com/Roestdev/hebrew_accents/"
keywords = ["hebrew", "cantillation_marks", "utf-8"]
categories = ["text-processing"]
readme = "README.md"
#rust-version = "1.56.1"

[dependencies]
regex = "1.11.1"
fancy-regex = "0.16.2"
once_cell = "1.10"